# GameBoyColor_emu-WIP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Bus.h  Cartridge.h  Config.h  Cpu.h  Emulator.h  EmulatorUI.h  Instruction.h  InvalidInstruction.h  Opcodes.h  TestSuite.h  Utils.h
src/: Bus.cpp  Cartridge.cpp  Cpu.cpp  Emulator.cpp  EmulatorUI.cpp  InvalidInstruction.cpp  Opcodes.cpp  TestSuite.cpp
